Fixed - Regression in Caret alignment due to UX updates in Item text.

--- a/app/css/less/custom/item-panel.less
+++ b/app/css/less/custom/item-panel.less
@@ -26,7 +26,7 @@
 
     .fa-caret-right {
       position: absolute;
-      top:17px;
+      top:19px;
       left: 10px;
       z-index: 2;
     }
